# mailjail

./: .gitignore  DESIGN.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.local.json
nix/: home-manager-module.nix
scripts/: mailjail-thunderbird-password.py
skills/mailjail/: SKILL.md
src/mailjail/: __main__.py  app.py  config.py  executor.py  policy.py  registry.py  session.py
src/mailjail/imap/: connection.py  drafts.py  fetch.py  flags.py  search.py
src/mailjail/models/: core.py  email.py  email_set.py  mailbox.py  submission.py  thread.py
tests/: conftest.py  test_app.py  test_config.py  test_executor.py  test_models.py  test_policy.py  test_registry.py  test_session.py  test_thunderbird_helper.py
tests/test_imap/: test_drafts.py  test_flags.py  test_search.py
