[project]
name = "mailjail"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imap_tools>=1.9",
    "waitress>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailjail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
